# elsword-atlas

./: index.html  package.json
src/: App.css  App.scss  App.tsx  StatusRow.tsx  main.tsx  styles.css  timer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  setup.rs
src/components/Icon/: index.scss  index.tsx
src/components/Settings/: index.scss  index.tsx
src/components/StatusRow/: index.scss  index.tsx
src/config/: constant.ts  index.ts  status.ts
src/hooks/: useTimer.ts
src/pages/Panel/: index.scss  index.tsx
