[package]
name = "elsword-atlas"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "global-shortcut-all",
    "window-set-always-on-top",
    "window-unminimize",
    "window-start-dragging",
    "window-unmaximize",
    "window-minimize",
    "window-maximize",
    "window-hide",
    "window-show",
    "window-close",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }

rdev = { version = "0.5.3", features = ["unstable_grab"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
